--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "eslint-config-rallycoding": "^3.2.0",
     "react": "16.4.1",
     "react-native": "0.56.0",
